--- a/body_builder/pubspec.yaml
+++ b/body_builder/pubspec.yaml
@@ -1,6 +1,6 @@
 name: body_builder
 description: "BodyBuilder is a widget that manage the loading of your data"
-version: 1.0.14
+version: 1.0.15
 homepage: https://github.com/jeromecaudoux/body_builder/
 
 environment:
@@ -13,11 +13,13 @@ dependencies:
   rxdart: ^0.28.0
   collection: ^1.19.0
   pull_to_refresh: ^2.0.0
+  cache_annotations: ^1.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  cache_generators: ^1.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
