--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ migrate_working_dir/
 # Libraries should not include pubspec.lock, per https://dart.dev/guides/libraries/private-files#pubspeclock.
 /pubspec.lock
 **/doc/api/
+
+.flutter-plugins
+.flutter-plugins-dependencies
