[pubspec.yaml] Use pub.dev body_builder

--- a/body_builder_riverpod_adapter/pubspec.yaml
+++ b/body_builder_riverpod_adapter/pubspec.yaml
@@ -10,8 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  body_builder:
-    path: ../body_builder
+  body_builder: ^1.0.15
   flutter_riverpod: ^2.6.1
 
 dev_dependencies:
